New Maven profile to execute tests on multiple JVMs in parallel